--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,5 @@ set(CMAKE_CXX_EXTENSIONS OFFJ)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 add_subdirectory(leptlog)
+add_subdirectory(bench)
 add_subdirectory(tests)
